<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:background="@drawable/background_dialog"
    android:padding="@dimen/normal_padding"
    android:gravity="center"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/dialog_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/time_line"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>
    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/small_title_text"
        android:text="@string/dialog_title_placeholder"
        android:textAlignment="center"
        />
    <TextView
        android:id="@+id/dialog_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_subtitle_placeholder"
        android:textAlignment="center"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/dialog_yes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_highlight"
            android:padding="@dimen/fab_margin"
            android:text="@string/dialog_yes"/>
        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/dialog_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/transparent_ripple"
            android:padding="@dimen/fab_margin"
            android:textColor="?android:attr/textColor"
            android:text="@string/dialog_no"
            android:elevation="0dp"/>
    </LinearLayout>
</LinearLayout>