<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/background_dialog"
    android:padding="@dimen/normal_padding"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_rec"
        android:fontFamily="@font/inter_bold"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>
    <EditText
        android:id="@+id/edt_name_rec"
        android:paddingVertical="16dp"
        android:paddingHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/normal_button"
        android:hint="@string/add_rec_name"
        android:textSize="16sp"
        />
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>
    <EditText
        android:id="@+id/edt_content_rec"
        android:paddingVertical="16dp"
        android:paddingHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/normal_button"
        android:hint="@string/add_rec_content"
        android:textSize="16sp"
        />
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>
    <EditText
        android:id="@+id/edt_money_rec"
        android:paddingVertical="16dp"
        android:paddingHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/normal_button"
        android:hint="@string/add_rec_money"
        android:inputType="number"
        android:textSize="16sp"
        />
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>
    <LinearLayout
        android:id="@+id/btn_choose_folder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/normal_button"
        android:padding="16dp"
        android:focusable="true"
        android:clickable="true"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/tv_folder_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/choose_folder_placeholder"
            android:textSize="16sp"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/folder_line"/>
            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_down_s_line"/>
        </LinearLayout>
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/calendar_line" />
            <Space
                android:layout_width="15dp"
                android:layout_height="0dp"/>
            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1/1/1970"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/time_line" />
            <Space
                android:layout_width="15dp"
                android:layout_height="0dp"/>
            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1/1/1970"/>
        </LinearLayout>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/dialog_yes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_highlight"
            android:padding="@dimen/fab_margin"
            android:text="@string/dialog_yes"/>
        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/dialog_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/transparent_ripple"
            android:padding="@dimen/fab_margin"
            android:textColor="?android:attr/textColor"
            android:text="@string/dialog_no"
            android:elevation="0dp"/>
    </LinearLayout>
</LinearLayout>