<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/background_dialog"
    android:padding="@dimen/normal_padding">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_filter"
        android:fontFamily="@font/inter_bold"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>
    <EditText
        android:id="@+id/edt_name_rec"
        android:paddingVertical="16dp"
        android:paddingHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/normal_button"
        android:hint="@string/add_rec_name"
        android:textSize="16sp"
        />
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>
    <EditText
        android:id="@+id/edt_content_rec"
        android:paddingVertical="16dp"
        android:paddingHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/normal_button"
        android:hint="@string/add_rec_content"
        android:textSize="16sp"
        />
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/btn_choose_from_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/normal_button"
                android:padding="16dp"
                android:focusable="true"
                android:clickable="true"
                android:gravity="center_vertical"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/tv_from_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/from_date"
                    android:textSize="16sp"
                    />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/calendar_line"/>
                </LinearLayout>
            </LinearLayout>
            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent"/>
            <LinearLayout
                android:id="@+id/btn_choose_to_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/normal_button"
                android:padding="16dp"
                android:focusable="true"
                android:clickable="true"
                android:gravity="center_vertical"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/tv_to_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/to_date"
                    android:textSize="16sp"
                    />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/calendar_line"/>
                </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>