<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">
            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/action_bar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorSurface"
                app:layout_scrollFlags="scroll|enterAlways">
                <Toolbar
                    android:paddingStart="0dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_collapseMode="pin">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:paddingEnd="25dp"
                        android:paddingTop="@dimen/fab_margin"
                        android:paddingStart="0dp"
                        android:paddingBottom="0dp"
                        android:background="?attr/colorSurface"
                        >
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical">
                            <ImageButton
                                android:id="@+id/btn_menu"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/menu_line"
                                android:background="@drawable/transparent_ripple"
                                android:padding="10dp"/>
                            <Space
                                android:layout_width="5dp"
                                android:layout_height="0dp"/>
                            <LinearLayout
                                android:id="@+id/time_selector"
                                android:paddingHorizontal="5dp"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:background="@drawable/transparent_ripple"
                                android:clickable="true"
                                android:focusable="true">
                                <TextView
                                    android:id="@+id/tv_title"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/inter_bold"
                                    android:text="@string/this_month"
                                    android:textSize="@dimen/title_text"
                                    android:textStyle="bold" />
                                <Space
                                    android:layout_width="10dp"
                                    android:layout_height="match_parent"/>
                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/arrow_down_wide_line"/>
                            </LinearLayout>

                        </LinearLayout>
                        <Space
                            android:layout_width="10dp"
                            android:layout_height="0dp"/>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <ImageButton
                                android:id="@+id/btn_edit"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/pencil_line"
                                android:background="@drawable/transparent_ripple"
                                android:padding="10dp"/>
                            <ImageButton
                                android:id="@+id/btn_add"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/add_circle_line"
                                android:background="@drawable/transparent_ripple"
                                android:padding="10dp"/>
                        </LinearLayout>
                    </LinearLayout>
                </Toolbar>
            </com.google.android.material.appbar.CollapsingToolbarLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingEnd="@dimen/normal_padding"
                android:paddingTop="@dimen/fab_margin"
                android:paddingStart="@dimen/normal_padding"
                android:paddingBottom="@dimen/fab_margin"
                android:background="?attr/colorSurface"
                android:baselineAligned="false"
                >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="10dp"
                android:gravity="center_vertical"
                android:background="?attr/colorSurface"
                android:baselineAligned="false">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/folder_line"/>
                <Space
                    android:layout_width="10dp"
                    android:layout_height="match_parent"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/folder_placeholder"
                    android:fontFamily="@font/inter_bold"/>
            </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingEnd="@dimen/normal_padding"
                android:paddingTop="0dp"
                android:paddingStart="@dimen/normal_padding"
                android:paddingBottom="@dimen/fab_margin"
                android:background="?attr/colorSurface"
                android:baselineAligned="false">
                <LinearLayout
                    android:paddingStart="10dp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/sum_num_date_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sum_num_date" />

                    <TextView
                        android:id="@+id/sum_num_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_bold"
                        android:text="0"
                        android:textSize="@dimen/title_text" />
                </LinearLayout>

                <LinearLayout
                    android:paddingStart="10dp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/sum_money_date_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sum_money_date"
                        />
                    <TextView
                        android:id="@+id/sum_money_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:fontFamily="@font/inter_bold"
                        android:textSize="@dimen/title_text"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingEnd="@dimen/normal_padding"
                android:paddingTop="0dp"
                android:paddingStart="@dimen/normal_padding"
                android:paddingBottom="@dimen/normal_padding"
                android:background="?attr/colorSurface"
                android:baselineAligned="false">
                <EditText
                    android:id="@+id/edt_search"
                    android:drawableStart="@drawable/search_line"
                    android:drawablePadding="10dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/outlined_button"
                    android:hint="@string/search"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingStart="25dp"
                    android:paddingEnd="25dp"
                    android:textSize="@dimen/normal_text"
                    />
                <Space
                    android:layout_width="10dp"
                    android:layout_height="0dp"/>
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/filter_line"
                    android:background="@drawable/outlined_button_ripple"
                    android:paddingHorizontal="@dimen/normal_padding"/>
            </LinearLayout>
        </com.google.android.material.appbar.AppBarLayout>
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <androidx.recyclerview.widget.RecyclerView
                android:paddingHorizontal="@dimen/normal_padding"
                android:id="@+id/rcv_items"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/sidebar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start">

    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>